test/types/typedefs/bradc/redefineTypeNames3.good
redefineTypeNames3.chpl:1: In function 'main':
redefineTypeNames3.chpl:6: error: illegal size 128 for bool
